Removed neon effect
Neon effect is pretty but it was making text blurry.

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,13 @@
 @import url('Average-Regular.ttf');
 
+/*
 .neonText {
 	color: #F9E79F;
 	text-shadow:
 		0 0 4px #FCEDB4,
 		0 0 6px #FCEDB4;
 }
+*/
 
 body {
 	background: #1A1A1A;
