--- a/styles/main.css
+++ b/styles/main.css
@@ -1,13 +1,7 @@
-@import url('Average-Regular.ttf');
-
-/*
-.neonText {
-	color: #F9E79F;
-	text-shadow:
-		0 0 4px #FCEDB4,
-		0 0 6px #FCEDB4;
+@font-face {
+    font-family: "serif";
+    src: url('Average-Regular.ttf');
 }
-*/
 
 body {
 	background: #1A1A1A;
