--- a/styles/main.css
+++ b/styles/main.css
@@ -20,6 +20,18 @@ h2 {
 	color: #F9E79F;
 }
 
+
+table, th, td {
+	border: 1px solid white;
+	border-collapse: collapse;
+}
+th, td {
+	padding: 5px;
+}
+th {
+	text-align: left;
+}
+
 a {
 	color: white;
 }
