--- a/styles/main.css
+++ b/styles/main.css
@@ -73,6 +73,9 @@ li a:hover {
 }
 
 .container {
-	margin-left: 5vw;
-	margin-right: 5vw;
+	position: absolute;
+	width:1024px;
+	margin:0px 0px 0px -512px;
+	left: 50%;
+	padding: 5px;
 }
