--- a/styles/main.css
+++ b/styles/main.css
@@ -73,7 +73,13 @@ li a:hover {
 }
 
 .content {
-	margin-left: 5vw;
-	margin-right: 5vw;
+	margin: auto;
 	padding: 10px;
+}
+@media (min-width: 1280px) {
+	.content {
+		max-width: 1280px;
+  		margin: auto;
+		padding: 10px;
+	}
 }
